# CandyJar

./: .gitignore  CMakeLists.txt  CandyJar.jucer  Claude.md  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/MidiParser/: MidiParser.cpp  MidiParser.h
